--- a/03-liens/dossier1/dossier3/fichier3.html
+++ b/03-liens/dossier1/dossier3/fichier3.html
@@ -4,14 +4,13 @@
 		</head>
 		<body>
 			<h1>fichier 3</h1>
-			<img src="../images/3.gif" />
+			<img src="../../images/3.gif" />
+		    <br />
+			<a href="../../fichier.html">fichier 1</a>
 			<br />
-			fichier
+		    <a href="../../dossier1/fichier2.html">fichier 2</a>
 			<br />
-			fichier 2
+			<a href="../../dossier2/fichier4.html">fichier 4</a>
 			<br />
-			fichier 3
-			<br />
-			fichier 4
 		</body>
 	</html>
