--- a/04a-pratique-h1-h6/equipes-nba.html
+++ b/04a-pratique-h1-h6/equipes-nba.html
@@ -1,39 +1,33 @@
-Equipes
-EST
-ATLANTIC
-Boston Celtics
-Brooklyn Nets
-New York Knicks
-Philadelphia 76ers
-Toronto Raptors
-CENTRAL
-Chicago Bulls
-Cleveland Cavaliers
-Detroit Pistons
-Indiana Pacers
-Milwaukee Bucks
-SOUTHEAST
-Atlanta Hawks
-Charlotte Hornets
-Miami Heat
-Orlando Magic
-Washington Wizards
-OUEST
-NORTHWEST
-Denver Nuggets
-Minnesota Timberwolves
-Oklahoma City Thunder
-Portland Trail Blazers
-Utah Jazz
-PACIFIC
-Golden State Warriors
-LA Clippers
-Los Angeles Lakers
-Phoenix Suns
-Sacramento Kings
-SOUTHWEST
-Dallas Mavericks
-Houston Rockets
-Memphis Grizzlies
-New Orleans Pelicans
-San Antonio Spurs
+<h1>Equipes</h1>
+<h1>EST</h1>
+<h1>ATLANTIC</h1>
+<h2>Boston Celtics</h2>
+<h2>Brooklyn Nets</h2>
+<h2>Philadelphia 76ers</h2>
+<h2>Toronto Raptors</h2>
+<h1>CENTRAL</h1>
+<h2>Cleveland Cavaliers</h2>
+<h2>Indiana Pacers</h2>
+<h2>Milwaukee Bucks</h2>
+<h1>SOUTHEAST</h1>
+<h2>Atlanta Hawks</h2>
+<h2>Miami Heat</h2>
+<h2>Washington Wizards</h2>
+<h1>OUEST</h1>
+<h1>NORTHWEST</h1>
+<h2>Denver Nuggets</h2>
+<h2>Minnesota Timberwolves</h2>
+<h2>Oklahoma City Thunder</h2>
+<h2>Portland Trail Blazers</h2>
+<h2>Utah Jazz</h2>
+<h1>PACIFIC</h1>
+<h2>Golden State Warriorsv</h2>
+<h2>LA Clippers</h2>
+<h2>Los Angeles Lakers</h2>
+<h2>Phoenix Suns</h2>
+<h1>SOUTHWEST</h1>
+<h2>Dallas Mavericks</h2>
+<h2>Houston Rockets</h2>
+<h2>Memphis Grizzlies</h2>
+<h2>New Orleans Pelicans</h2>
+<h2>San Antonio Spurs</h2>
