--- a/09-modele-de-boite/boite.html
+++ b/09-modele-de-boite/boite.html
@@ -11,7 +11,35 @@
 				  box-sizing: border-box;
 				}
 								
+		
+	
+			
+				* {
+				  border-color: grey;
+
+
+
+
+
+				}
+
+				.contenuItem{
+				border-width: 1px;
+                 border-style:solid;
+                 border-radius: 25px;
+                 text-align: center;	
+					margin-top: 10px;
+					background-image: linear-gradient(grey,white, white);
+;
+				}
+h4 {font-size: 2em;
+
+}
+.contenuItemContenu::first-letter {
+  font-size: 200%;}
+								
 			</style>
+			
 			
 		</head>
 		<body>
@@ -21,16 +49,19 @@
 					<h4>Acceuil</h4>
 					<div class="contenuItemContenu">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
 				</div>
+
 				<div class="contenuItem">
 					<a name="contact"></a>
 					<h4>Contact</h4>
 					<div class="contenuItemContenu">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
 				</div>
+
 				<div class="contenuItem">
 					<a name="aide"></a>
 					<h4>Aide</h4>
 					<div class="contenuItemContenu">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
 				</div>
+
 				<div class="contenuItem">
 					<a name="magasins"></a>
 					<h4>Magasins</h4>
@@ -46,6 +77,7 @@
 					<h4>Liens</h4>
 					<div class="contenuItemContenu">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
 				</div>
+
 				<div class="contenuItem">
 					<a name="social"></a>
 					<h4>Social</h4>
@@ -56,6 +88,7 @@
 					<h4>Partenaires</h4>
 					<div class="contenuItemContenu">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
 				</div>
+
 				<div class="contenuItem">
 					<a name="deconnexion"></a>
 					<h4>Deconnexion</h4>
@@ -64,3 +97,5 @@
 			</div>
 		</body>
 	</html>
+
+
