--- a/14-site-web/index.html
+++ b/14-site-web/index.html
@@ -1,8 +1,139 @@
 <!doctype html>
 	<html>
 		<head>
+
+			
+
+
+			<link rel="stylesheet" type="text/css" href="style.css">
             <title></title>
-		</head>
-		<body>
+            <style >
+            	
+
+
+            	.menuItem a:hover {
+					color: lightpink;
+				}
+
+#menu {
+					display: flex;
+					flex-flow: wrap;
+					justify-content: flex-end;
+				}
+				
+				.menuItem {
+					float: right;
+					border-top-left-radius: 10px;
+					border-top-right-radius: 15px;
+					padding: 10px;
+					border-color: lightpink;
+					border-style: solid;
+					border-width: 1px;
+
+				}
+			
+				.menuItem a {
+					color: pink;
+					text-decoration: none;
+				}
+			
+				.menuItem a:hover {
+					color: #4CAF50;
+				}
+			
+			
+				.menuItem.active {
+					background-color: hotpink;
+				}
+			
+				.menuItem.active a {
+					color: white;
+				}
+				h1 {
+  text-align: left;
+  text-transform: uppercase;
+  color: hotpink;
+
+}
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid hotpink;
+  padding: 10px;
+}
+
+.shop {
+  margin: auto;
+  width: 50%;
+ 
+ padding: 10px;
+}
+</style>
+<body>
+<h1>PINK</h1>
+			<div class="menuItem">
+					<a href="../14-site-web/magasin.html">Magasins</a>
+				</div>
+ 
+
+ 
+<div class="center">
+	 <img src="https://i.pinimg.com/564x/a5/6c/cb/a56ccbd34072c46e26d10b868cca6d82.jpg" style="width:15%" >
+  <img src="https://i.pinimg.com/564x/65/6c/84/656c8426b973fdce87263c6080dd7bcf.jpg" style="width:25%" >
+ <img src="https://www.iconsdb.com/icons/preview/pink/letter-p-xxl.png" style="width:16%" >
+  <img src="https://i.pinimg.com/564x/d1/19/86/d1198652df9853ec2969dc4e2874d096.jpg"  style="width:25%">
+<img src="https://i.pinimg.com/564x/83/6b/0b/836b0b22492100fac76c9bec0ef7a409.jpg" style="width:16%" >
+</div>
+
+<div class="shop">
+	 <img src="" style="width:15%" >
+  <img src="" style="width:25%" >
+ <img src="" style="width:16%" >
+  <img src=""  style="width:25%">
+<img src="" style="width:16%" >
+</div>	
+		
+
+
+		<div class="shop">
+	 <img src="https://i.pinimg.com/564x/d8/c1/38/d8c13879108c1f1401c24363273e46b1.jpg" style="width:15%" >
+  <img src="https://i.pinimg.com/564x/d8/c1/38/d8c13879108c1f1401c24363273e46b1.jpg" style="width:25%" >
+ <img src="https://i.pinimg.com/564x/d8/c1/38/d8c13879108c1f1401c24363273e46b1.jpg" style="width:16%" >
+  <img src="https://i.pinimg.com/564x/d8/c1/38/d8c13879108c1f1401c24363273e46b1.jpg"  style="width:25%">
+<img src="https://i.pinimg.com/564x/d8/c1/38/d8c13879108c1f1401c24363273e46b1.jpg" style="width:16%" >
+</div>			
+	
+
+
+				<div class="shop">
+					<a href="../14-site-web/magasin.html"> <img src="https://i.pinimg.com/564x/77/5c/28/775c2863f6038b4fd416802490ff5a45.jpg" style="width:16%" >
+</a>
+<a href="../14-site-web/magasin.html"> <img src="https://i.pinimg.com/564x/24/4e/4f/244e4f0f56bdc7543eb71b43d0217929.jpg"  style="width:18%">
+</a>
+<a href="../14-site-web/magasin.html"> <img src="https://i.pinimg.com/564x/aa/b5/90/aab590e00e58c519172133d28d6f1d13.jpg" style="width:22%" >
+</a>
+<a href="../14-site-web/magasin.html">  <img src="https://i.pinimg.com/564x/24/4e/4f/244e4f0f56bdc7543eb71b43d0217929.jpg"  style="width:18%">
+
+</a>
+<a href="../14-site-web/magasin.html"><img src="https://i.pinimg.com/564x/8f/75/65/8f7565a3b410ae9e86d94fbf03d70f29.jpg" style="width:18%" >
+
+</a>
+				</div>
+
+
+
+				<div class="center">
+					<a href="../14-site-web/magasin.html"> MAGASINE ICI !
+</a>
+
+
+</a>
+				</div>
+
 		</body>
 	</html>
